# TeaCat

./: .gitignore  Cargo.toml  justfile  readme.md  test.tcat  test.wc
src/: cliargs.rs  eval.rs  expansion.rs  html.rs  lexer.rs  main.rs  parser.rs  utils.rs
teacat_lib/: Cargo.toml  readme.md
teacat_lib/src/: error.rs  expanded.rs  lexer.rs  lib.rs  parser.rs
teacat_lib/src/expanded/: renderer.rs
teacat_lib/src/expanded/renderer/: tcat.rs
webcat_lib/: Cargo.toml  readme.md
webcat_lib/src/: error.rs  expanded.rs  html.rs  lexer.rs  lib.rs  parser.rs  utils.rs
webcat_lib/src/error/: lines.rs
webcat_lib/src/expanded/: renderer.rs
webcat_lib/src/expanded/renderer/: html.rs
webcat_lib/src/lexer/: str_walker.rs
