[package]
name = "teacat_lib"
version = "0.1.1"
edition = "2024"
description = "Tools for working with TeaCat files"
license = "Artistic-2.0"
categories = ["compilers", "parser-implementations"]
keywords = ["templating", "template", "markup", "html", "language"]
readme = "readme.md"
repository = "https://github.com/Ultrasquid9/TeaCat"

[dependencies]
html-escape = "0.2"
anyhow = "1"
anstyle = "1"
